--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -11,11 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <!-- 페이지 위 부분 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <!-- 공구합시당 사진 공간 -->
             <ImageView
                 android:id="@+id/textView"
                 android:layout_width="50dp"
@@ -24,6 +27,7 @@
                 android:src="@drawable/main_logo"
                 android:text="로그인" />
 
+            <!-- 페이지 이름 공간 -->
             <TextView
                 android:layout_width="359dp"
                 android:layout_height="match_parent"
@@ -34,12 +38,14 @@
                 android:typeface="monospace" />
         </LinearLayout>
 
+        <!-- 게시글 내용 출력 공간 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="234dp"
             android:layout_weight="0.4"
             android:orientation="vertical">
 
+            <!-- 제목 공간 -->
             <EditText
                 android:id="@+id/titleEditText"
                 android:layout_width="371dp"
@@ -51,12 +57,14 @@
                 android:hint="제목을 입력하시오"
                 android:inputType="text" />
 
+            <!-- 게시글 사진, 모집인원, 참가하기 버튼 공간 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="161dp"
-                android:layout_weight=""
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
+                <!-- 게시글 사진 -->
                 <ImageView
                     android:id="@+id/pictureView"
                     android:layout_width="150dp"
@@ -78,6 +86,7 @@
                     android:textSize="25sp"
                     android:typeface="monospace" />
 
+                <!-- 모집인원 공간 -->
                 <EditText
                     android:id="@+id/limitEditText"
                     android:layout_width="70dp"
@@ -99,6 +108,7 @@
                     android:textSize="25sp"
                     android:typeface="monospace" />
 
+                <!-- 참가하기 버튼 -->
                 <Button
                     android:id="@+id/joinButton"
                     android:layout_width="147dp"
@@ -111,6 +121,7 @@
 
             </LinearLayout>
 
+            <!-- 게시글 내용 공간 -->
             <EditText
                 android:id="@+id/contentEditText"
                 android:layout_width="401dp"
@@ -123,14 +134,12 @@
                 android:inputType="textEmailAddress" />
         </LinearLayout>
 
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.05">
 
+            <!-- 로그아웃 버튼 -->
             <Button
                 android:id="@+id/logoutButton"
                 android:layout_width="match_parent"
