--- a/app/src/main/res/layout/activity_choose_category.xml
+++ b/app/src/main/res/layout/activity_choose_category.xml
@@ -11,11 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <!-- 페이지 위 부분 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <!-- 공구합시당 사진 공간 -->
             <ImageView
                 android:id="@+id/textView"
                 android:layout_width="50dp"
@@ -24,6 +27,7 @@
                 android:src="@drawable/main_logo"
                 android:text="로그인" />
 
+            <!-- 페이지 이름 공간 -->
             <TextView
                 android:layout_width="359dp"
                 android:layout_height="match_parent"
@@ -34,7 +38,7 @@
                 android:typeface="monospace" />
         </LinearLayout>
 
-
+        <!-- 레이아웃 설명(카테고리 선택) 공간 -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,11 +47,13 @@
             android:textSize="20sp"
             android:typeface="monospace" />
 
+        <!-- 학과선택 공간 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
 
+            <!-- 옷 버튼 -->
             <Button
                 android:id="@+id/clothes"
                 android:layout_width="104dp"
@@ -59,6 +65,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintWidth_percent="0.33" />
 
+            <!-- 책 버튼 -->
             <Button
                 android:id="@+id/books"
                 android:layout_width="104dp"
@@ -70,6 +77,7 @@
                 app:layout_constraintStart_toEndOf="@+id/clothes"
                 app:layout_constraintWidth_percent="0.33" />
 
+            <!-- 기타 버튼 -->
             <Button
                 android:id="@+id/others"
                 android:layout_width="104dp"
@@ -87,6 +95,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.075">
 
+            <!-- 로그아웃 버튼 -->
             <Button
                 android:id="@+id/logoutButton"
                 android:layout_width="match_parent"
