--- a/app/src/main/res/layout/activity_display_post.xml
+++ b/app/src/main/res/layout/activity_display_post.xml
@@ -10,11 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <!-- 페이지 위 부분 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <!-- 공구합시당 사진 공간 -->
             <ImageView
                 android:id="@+id/textView"
                 android:layout_width="50dp"
@@ -23,6 +26,7 @@
                 android:src="@drawable/main_logo"
                 android:text="로그인" />
 
+            <!-- 페이지 이름 공간 -->
             <TextView
                 android:layout_width="359dp"
                 android:layout_height="match_parent"
@@ -33,11 +37,13 @@
                 android:typeface="monospace" />
         </LinearLayout>
 
+        <!-- 선택한 조건 출력 공간 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <!-- '조건:' 단어 출력 공간 -->
                 <TextView
                     android:id="@+id/departmentShowText"
                     android:layout_width="100dp"
@@ -47,6 +53,8 @@
                     android:text="조건:"
                     android:textSize="30sp"
                     android:typeface="monospace" />
+
+                <!-- 학과명 공간 -->
                 <TextView
                     android:id="@+id/categoryShowText"
                     android:layout_width="200dp"
@@ -56,6 +64,8 @@
                     android:text="학과명"
                     android:textSize="30sp"
                     android:typeface="monospace" />
+
+                <!-- 카테고리명 공간 -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -66,11 +76,13 @@
                     android:typeface="monospace" />
             </LinearLayout>
 
+        <!-- 글목록 공간 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <!-- 첫 번째 글 번호 -->
             <TextView
                 android:id="@+id/display1text"
                 android:layout_width="40dp"
@@ -81,6 +93,7 @@
                 android:textStyle="bold"
                 android:text="1"/>
 
+            <!-- 첫 번째 글 제목 -->
             <Button
                 android:id="@+id/display1button"
                 android:layout_width="229dp"
@@ -91,6 +104,7 @@
                 android:textColor="#AAAAAA"
                 android:textSize="10dp" />
 
+            <!-- 첫 번째 글 생성날짜 -->
             <TextView
                 android:id="@+id/display1date"
                 android:layout_width="109dp"
@@ -101,6 +115,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
+            <!-- 첫 번째 글 잔여인원수/최대인원수 -->
             <TextView
                 android:id="@+id/display1limit"
                 android:layout_width="109dp"
@@ -114,6 +129,7 @@
                 android:layout_marginLeft="-109dp"/>
         </LinearLayout>
 
+        <!-- 첫 번째 글 양식과 동일 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -306,11 +322,13 @@
                 android:layout_marginLeft="-109dp"/>
         </LinearLayout>
 
+        <!-- 게시글 목록 이동 버튼들 모임 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <!-- 앞 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/movefrontButton"
                 android:layout_width="50dp"
@@ -322,6 +340,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/move1Button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintWidth_percent="0.125" />
+            <!-- 1번 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/move1Button"
                 android:layout_width="50dp"
@@ -333,6 +352,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/move2Button"
                 app:layout_constraintStart_toEndOf="@+id/movefrontButton"
                 app:layout_constraintWidth_percent="0.125" />
+            <!-- 2번 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/move2Button"
                 android:layout_width="50dp"
@@ -344,6 +364,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/move3Button"
                 app:layout_constraintStart_toEndOf="@+id/move1Button"
                 app:layout_constraintWidth_percent="0.125"/>
+            <!-- 3번 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/move3Button"
                 android:layout_width="50dp"
@@ -355,6 +376,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/move4Button"
                 app:layout_constraintStart_toEndOf="@+id/move2Button"
                 app:layout_constraintWidth_percent="0.125"/>
+            <!-- 4번 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/move4Button"
                 android:layout_width="50dp"
@@ -366,6 +388,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/move5Button"
                 app:layout_constraintStart_toEndOf="@+id/move3Button"
                 app:layout_constraintWidth_percent="0.125"/>
+            <!-- 5번 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/move5Button"
                 android:layout_width="50dp"
@@ -377,6 +400,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/move6Button"
                 app:layout_constraintStart_toEndOf="@+id/move4Button"
                 app:layout_constraintWidth_percent="0.125"/>
+            <!-- 6번 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/move6Button"
                 android:layout_width="50dp"
@@ -388,6 +412,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/move7Button"
                 app:layout_constraintStart_toEndOf="@+id/move5Button"
                 app:layout_constraintWidth_percent="0.125"/>
+            <!-- 다음 게시글 목록으로 이동 버튼 -->
             <Button
                 android:id="@+id/movebackButton"
                 android:layout_width="50dp"
@@ -401,12 +426,14 @@
                 app:layout_constraintWidth_percent="0.125" />
         </LinearLayout>
 
+        <!-- 게시글 검색 버튼 공간 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.075"
             android:orientation="horizontal">
 
+            <!-- 검색할 게시글 이름 입력 버튼 -->
             <EditText
                 android:id="@+id/searchEditText"
                 android:layout_width="300dp"
@@ -416,6 +443,7 @@
                 android:hint="제목을 입력하시오"
                 android:inputType="text" />
 
+            <!-- 게시글 검색 버튼 -->
             <Button
                 android:id="@+id/searchButton"
                 android:layout_width="72dp"
@@ -432,6 +460,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.075">
 
+            <!-- 로그아웃 버튼 -->
             <Button
                 android:id="@+id/writeButton"
                 android:layout_width="match_parent"
