--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,11 +11,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!-- 사진 위 공간 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"/>
 
+        <!-- 사진이 차지하는 공간 -->
         <ImageView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -24,15 +26,16 @@
             android:src="@drawable/main_logo"
             android:text="로그인" />
 
+        <!-- 사진 아래, 정보 입력 공간 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-
             android:orientation="vertical"
             android:gravity="top"
             android:padding="30dp">
 
+            <!-- 이메일(아이디) 입력 공간 -->
             <EditText
                 android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
@@ -42,7 +45,7 @@
                 android:hint="이메일"
                 android:inputType="textEmailAddress" />
 
-
+            <!-- 비밀번호 입력 공간 -->
             <EditText
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
@@ -52,6 +55,7 @@
                 android:hint="비밀번호"
                 android:inputType="textPassword" />
 
+            <!-- 로그인 버튼 -->
             <Button
                 android:id="@+id/checkbutton"
                 android:layout_width="match_parent"
@@ -60,6 +64,7 @@
                 android:text="로그인"
                 android:textColor="#000000" />
 
+            <!-- 회원가입 버튼 -->
             <Button
                 android:id="@+id/signupbutton"
                 android:layout_width="match_parent"
@@ -67,7 +72,6 @@
                 android:backgroundTint="#CBD5DD"
                 android:text="회원가입"
                 android:textColor="#000000"/>
-
 
         </LinearLayout>
 
