--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!-- 사진이 차지하는 공간 -->
         <ImageView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -20,6 +21,7 @@
             android:src="@drawable/main_logo"
             android:text="로그인" />
 
+        <!-- 사진 아래, 정보 입력 공간 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -28,6 +30,7 @@
             android:gravity="top"
             android:padding="30dp">
 
+            <!-- 이메일(아이디) 입력 공간 -->
             <EditText
                 android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
@@ -37,6 +40,7 @@
                 android:hint="이메일"
                 android:inputType="textEmailAddress" />
 
+            <!-- 이름 입력 공간 -->
             <EditText
                 android:id="@+id/nameEditText"
                 android:layout_width="match_parent"
@@ -46,7 +50,7 @@
                 android:hint="이름"
                 android:inputType="textEmailAddress" />
 
-
+            <!-- 비밀번호 입력 공간 -->
             <EditText
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
@@ -56,6 +60,7 @@
                 android:hint="비밀번호"
                 android:inputType="textPassword" />
 
+            <!-- 비밀번호 확인 입력 공간 -->
             <EditText
                 android:id="@+id/password_check"
                 android:layout_width="match_parent"
@@ -65,6 +70,7 @@
                 android:hint="비밀번호확인"
                 android:inputType="textPassword" />
 
+            <!-- 로그인 버튼 -->
             <Button
                 android:id="@+id/gotoLoginButton"
                 android:layout_width="match_parent"
@@ -73,6 +79,7 @@
                 android:text="로그인"
                 android:textColor="#000000"/>
 
+            <!-- 회원가입 버튼 -->
             <Button
                 android:id="@+id/signUpbutton"
                 android:layout_width="match_parent"
