--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,6 @@
             android:textColor="#000000" />
 
         <Button
-            android:id="@+id/logoutButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#CBD5DD"
-            android:text="로그아웃"
-            android:textColor="#000000" />
-
-        <Button
             android:id="@+id/Major_Category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +33,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/main_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="125dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
