--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -20,4 +20,10 @@
         android:textSize="16sp"
         android:textColor="@android:color/holo_blue_light"
         android:text="Contents"/>
+
+    <TextView
+        android:id="@+id/item_post_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Name" />
 </LinearLayout>
