--- a/app/src/main/res/layout/activity_display_post.xml
+++ b/app/src/main/res/layout/activity_display_post.xml
@@ -334,7 +334,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#CBD5DD"
-                android:text="<"
+                android:text="왼"
                 android:textColor="#000000"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toStartOf="@+id/move1Button"
@@ -418,7 +418,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#CBD5DD"
-                android:text=">"
+                android:text="오"
                 android:textColor="#000000"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
