--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
     <TextView
         android:id="@+id/item_post_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="208dp"
+        android:layout_height="50dp"
         android:layout_margin="8dp"
-        android:textSize="18sp"
+        android:text="TITLE"
         android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:text="TITLE"/>
-
-    <TextView
-        android:id="@+id/item_post_contents"
-        android:layout_width="382dp"
-        android:layout_height="30dp"
-        android:textColor="@android:color/holo_blue_light"
-        android:layout_margin="8dp"
-        android:textSize="14sp"
-        android:text="Contents"/>
-
-    <TextView
-        android:id="@+id/item_post_name"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Name" />
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/item_post_contents"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Contents"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/item_post_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Name" />
+    </LinearLayout>
 </LinearLayout>
