--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,39 +33,14 @@
 
             <!-- 소프트웨어학과 버튼 -->
             <Button
-                android:id="@+id/softwarebutton"
-                android:layout_width="wrap_content"
+                android:id="@+id/Major_Category"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:backgroundTint="#8B00FF"
-                android:text="소프트웨어"
-                app:layout_constraintEnd_toStartOf="@+id/computerbutton"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintWidth_percent="0.33" />
-
-            <!-- 컴퓨터공학과 버튼 -->
-            <Button
-                android:id="@+id/computerbutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:backgroundTint="#8B00FF"
-                android:text="컴퓨터공학"
-                app:layout_constraintEnd_toStartOf="@+id/electricbutton"
-                app:layout_constraintStart_toEndOf="@+id/softwarebutton"
-                app:layout_constraintWidth_percent="0.33" />
-
-            <!-- 전자공학과 버튼 -->
-            <Button
-                android:id="@+id/electricbutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:backgroundTint="#8B00FF"
-                android:text="전자공학과"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/computerbutton"
-                app:layout_constraintWidth_percent="0.33" />
+                android:backgroundTint="#6200EE"
+                android:text="학과 선택"
+                android:textColor="#FFFFFF"
+                tools:layout_editor_absoluteX="-40dp"
+                tools:layout_editor_absoluteY="100dp" />
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
@@ -106,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#6200EE"
                 android:text="로그아웃"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 tools:layout_editor_absoluteX="-40dp"
                 tools:layout_editor_absoluteY="100dp" />
         </LinearLayout>
