--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -10,17 +10,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <EditText
-        android:id="@+id/post_title_edit"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:hint="Title"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        tools:ignore="HardcodedText" />
 
+        <!-- 제목 공간 -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="제목:"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:typeface="monospace" />
+
+        <!-- 제목 입력 공간 -->
+        <EditText
+            android:id="@+id/post_title_edit"
+            android:layout_width="270dp"
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:hint="제목을 입력하시오"
+            android:inputType="text" />
+        <!-- 저장 버튼 -->
         <Button
             android:id="@+id/post_save_button"
             android:layout_width="wrap_content"
@@ -29,18 +38,36 @@
             android:text="save"/>
 
     </LinearLayout>
+    <!-- 사진 게시, 게시글 게시 공간 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button_select_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Image"
-        android:layout_marginTop="16dp"
-        android:onClick="onClick"
-        app:layout_constraintTop_toBottomOf="@id/post_content_edit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <!-- 사진 올리기 버튼 -->
+        <Button
+            android:id="@+id/button_select_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Image"
+            android:layout_marginTop="16dp"
+            android:onClick="onClick"
+            app:layout_constraintTop_toBottomOf="@id/post_content_edit"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
+        <!-- 사진 출력 공간 -->
+        <ImageView
+            android:id="@+id/pictureView"
+            android:layout_width="200dp"
+            android:layout_height="68dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0"
+            android:src="@drawable/main_logo"
+            android:text="그림 미리보기" />
+    </LinearLayout>
     <EditText
         android:id="@+id/post_content_edit"
         android:layout_width="match_parent"
@@ -48,6 +75,48 @@
         android:hint="@null"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="16sp" />
+
+    <!-- 모집인원 공간 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="모집인원:"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:typeface="monospace" />
+
+        <!-- 모집인원 입력 공간 -->
+        <EditText
+            android:id="@+id/limitEditText"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:ems="10"
+            android:inputType="text" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="명"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:typeface="monospace" />
+    </LinearLayout>
+
+
 
 
 </LinearLayout>
