--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PostActivity">
+    tools:context=".PostActivity"
+    tools:ignore="ExtraText">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,6 +42,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ImageView
+        android:id="@+id/imageViewPreview"
+        android:layout_width="246dp"
+        android:layout_height="182dp"
+        android:scaleType="centerCrop" />
     <EditText
         android:id="@+id/post_content_edit"
         android:layout_width="match_parent"
